--- a/app/containers/CourseDetails/CourseDetails.css
+++ b/app/containers/CourseDetails/CourseDetails.css
@@ -284,7 +284,7 @@ body {
   color: #9900aa;
   font-size: 35px;
   font-weight: 900;
-  margin-top: 2rem;
+  margin-top: 3rem;
 }
 .rating-div {
   margin-top: 2rem;
@@ -403,6 +403,18 @@ body {
 .class-tittle4 {
   margin: 0.1rem 2rem 0 1.5rem;
   font-size: 13px;
+}
+.name-under1 img {
+  width: 1.5rem !important;
+  height: 1.5rem !important;
+  padding-right: 0.1rem;
+  margin-top: 0;
+}
+.name-under img {
+  width: 2rem !important;
+  height: 2rem !important;
+  padding-right: 0.1rem;
+  margin-top: 0;
 }
 
 @media only screen and (max-width: 600px) {
