--- a/app/containers/HomePage/HomePage.css
+++ b/app/containers/HomePage/HomePage.css
@@ -130,13 +130,14 @@
   border-radius: 10px;
   margin: auto;
   margin-top: 1rem;
-  box-shadow: 10px 10px 10px rgb(209, 209, 209);
+  box-shadow: 5px 5px 10px rgb(209, 209, 209);
 }
 .cardmain img {
   width: 100%;
-  padding: 1.5%;
   height: 10rem;
   border-radius: 10px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 .cardtittle {
   font-size: 23px;
@@ -301,6 +302,7 @@
   color: #b83b5e;
   text-align: center;
   margin-top: 2rem;
+  padding: 0 5%;
 }
 .textopacityalign {
   position: relative;
@@ -324,7 +326,7 @@
 }
 .textalign {
   color: gray !important;
-  font-size: 18px;
+  font-size: 23px;
   padding: 0 15%;
   margin: auto;
 }
@@ -340,9 +342,9 @@
 }
 .livetittle {
   position: relative;
-  color: #aa004f;
+  color: #908d8e;
   text-align: center;
-  font-size: 30px;
+  font-size: 25px;
 }
 .circleflex {
   display: flex;
@@ -353,9 +355,10 @@
   margin: 0 1rem;
 }
 .circle img {
+  border: 1px solid #fbfbfb;
+  box-shadow: 30px 24px 60px #9a9292;
   opacity: 0.9;
   width: 50rem;
-  background-color: #d7a3dd4a;
   height: 45rem;
   border-radius: 50%;
 }
@@ -400,7 +403,8 @@
 }
 .colorname {
   color: #9900aa;
-  text-align: right;
+  text-align: center;
+  font-size: 20px;
 }
 .thankstittle {
   font-size: 45px;
@@ -518,8 +522,14 @@
 .msg-mob {
   display: none;
 }
+.logo-img {
+  height: 20vh;
+}
 
 @media only screen and (max-width: 600px) {
+  .logo-img {
+    height: 0;
+  }
   .chatcard {
     display: none !important;
     background-color: white !important;
@@ -530,15 +540,18 @@
   }
   .msg-mob {
     display: block;
-    width: 3rem;
-    height: 3rem;
+    width: 5rem;
+    height: 5rem;
     text-align: center;
     margin: auto;
+    border: 2px solid #9900aa;
+    border-radius: 50%;
   }
   .msg-mob img {
-    width: 3rem;
-    height: 3rem;
+    width: 4.8rem;
+    height: 4.8rem;
     border-radius: 50%;
+    padding: 0.2rem;
   }
   .overall {
     text-align: center;
@@ -588,11 +601,6 @@
   .text-help {
     font-size: 25px;
     padding: 0 8%;
-  }
-  .logoscroll2 {
-    width: 40vw;
-    margin-top: 1rem;
-    margin-bottom: 5rem;
   }
   .curve-overall {
     height: 118rem;
@@ -649,7 +657,7 @@
   }
   .bottomimg {
     width: 100vw;
-    height: 30vh;
+    height: 18vh;
   }
   .bottomtab {
     background-color: #fbf6fc;
@@ -658,16 +666,16 @@
     padding-top: 5rem;
   }
   .cardmain {
-    width: 83%;
+    width: 96%;
     min-height: 5vh;
-    margin-left: 2.5rem;
+    margin-left: 0.9rem;
   }
   .logoscroll2 {
-    background: none;
-    margin: auto;
-    width: 55vw;
+    width: 90vw;
     margin-top: 1rem;
     margin-bottom: 5rem;
+    background: none;
+    margin: auto;
   }
   .logos img {
     width: 30rem;
@@ -684,16 +692,16 @@
     margin: auto !important;
   }
   .curve-mid {
-    min-height: 425vh !important;
+    display: none;
   }
   .texttittle1 {
-    padding-top: 10rem !important;
+    padding-top: 1rem !important;
   }
   .join-text {
-    margin-top: 170vh;
+    margin-top: 135vh;
   }
   .message {
-    height: 18rem !important;
+    height: 20rem !important;
     margin-left: 0 !important;
   }
   .course-card-main {
@@ -702,13 +710,19 @@
   .card-buttom {
     margin: auto;
     align-items: center;
-    flex-direction: column;
   }
   .logoscroll {
     width: 90vw;
     margin-bottom: 0;
+    margin-top: 0;
   }
   .search {
     height: 3.2rem;
+  }
+  .MuiTabScrollButton-root {
+    background-color: #ffffff !important;
+    padding-left: 0.1rem !important;
+    border-radius: 40px !important;
+    box-shadow: 2px 2px 7px #666565 !important;
   }
 }
